# AURA-Adaptive-Utility-Reasoning-Architecture-

./: .gitignore  README.md
src/aura_bringup/: package.xml  setup.py
src/aura_bringup/config/: default_weights.yaml
src/aura_bringup/launch/: dashboard.launch.py  demo.launch.py  headless.launch.py
src/aura_core/: package.xml  setup.cfg  setup.py
src/aura_core/aura_core/: aura_core_node.py  logger_node.py  metrics_node.py  scenario_manager_node.py  utility_planner_node.py
src/aura_core/aura_core/engine/: explanation.py  explanation_engine.py  policy.py  scoring.py
src/aura_core/aura_core/engine/analyzers/: __init__.py  conflict_analyzer.py  dominant_qa_analyzer.py  formatter.py  tradeoff_analyzer.py  transition_analyzer.py  trigger_analyzer.py
src/aura_core/config/: scenarios.yaml
src/aura_core/test/: test_engine.py
src/aura_dashboard/: package.xml  setup.cfg  setup.py
src/aura_dashboard/aura_dashboard/: aura_cli.py  web_bridge_node.py  ws_server.py
src/aura_dashboard/operator_console/: index.html
src/aura_examples/: package.xml  setup.cfg  setup.py
src/aura_examples/aura_examples/: rule_planner_node.py
src/aura_interfaces/: package.xml  setup.cfg  setup.py
src/aura_interfaces/aura_interfaces/: base_planner.py  context.py  evidence.py  ros_convert.py
src/aura_msgs/: CMakeLists.txt  package.xml
src/aura_msgs/msg/: AuraDecision.msg  AuraDiagnostics.msg  AuraExplanation.msg  AuraMetrics.msg  AuraWeights.msg  PolicyEvidence.msg  RobotContext.msg
