<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aura_core</name>
  <version>1.0.0</version>
  <description>AURA runtime explainability middleware: the explanation engine (six modular analyzers, exact tradeoff decomposition), the scenario manager driving the demo world, the reference utility planner, metrics and logging.</description>
  <maintainer email="ram@example.com">Ram</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aura_msgs</exec_depend>
  <exec_depend>aura_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>
