<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aura_dashboard</name>
  <version>1.0.0</version>
  <description>AURA operator console: web bridge (ROS2 to WebSocket), the live browser console, and the aura_cli terminal readout.</description>
  <maintainer email="ram@example.com">Ram</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aura_msgs</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
