<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aura_examples</name>
  <version>1.0.0</version>
  <description>Example planners demonstrating that AURA is planner-agnostic: a rule-based planner in ~60 lines behind the same contract.</description>
  <maintainer email="ram@example.com">Ram</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aura_msgs</exec_depend>
  <exec_depend>aura_interfaces</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
